@@ -1,2 +1,3 @@
+ENV RUNTIME_OPTS=--enable-preview
 FROM navikt/java:14
 COPY target/*.jar app.jar
